--- a/Ettercap/Readme
+++ b/Ettercap/Readme
@@ -1,1 +1,6 @@
+# 🕵️ Ettercap  
+Resources, guides, and tricks for Ettercap users.  
+💡 Found something useful? Share it with the community!  
+
+⚠️ **Heads up!** Files over **25MB** won’t upload due to GitHub limits.  
 
